--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,12 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.abhishek.feedback.MainActivity">
+    tools:context="com.example.abhishek.feedback.MainActivity"
+    android:background="#e98d16">
 
     <TextView
         android:text="@string/Heading"
+        android:textColor="@color/abc_primary_text_material_light"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/text1"/>
@@ -21,11 +23,13 @@
     <TextView
         android:text="@string/Please"
         android:layout_width="wrap_content"
+        android:textColor="@color/abc_primary_text_material_light"
         android:layout_height="wrap_content"
         android:id="@+id/text2"
         android:layout_below="@+id/text1"/>
     <TextView
         android:text="@string/survey"
+        android:textColor="@color/abc_primary_text_material_light"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/text3"
@@ -34,6 +38,7 @@
         android:textSize="20dp"/>
     <TextView
         android:text="@string/FoodQuality"
+        android:textColor="@color/abc_primary_text_material_light"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/text4"
@@ -50,6 +55,7 @@
        android:layout_centerHorizontal="true" />
     <TextView
         android:text="@string/Service"
+        android:textColor="@color/abc_primary_text_material_light"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/text5"
@@ -66,6 +72,7 @@
         android:layout_centerHorizontal="true" />
     <TextView
         android:text="@string/Atmosphere"
+        android:textColor="@color/abc_primary_text_material_light"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/text6"
@@ -82,6 +89,7 @@
         android:layout_centerHorizontal="true" />
     <TextView
         android:text="@string/Cleanliness"
+        android:textColor="@color/abc_primary_text_material_light"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/text7"
@@ -99,6 +107,7 @@
 
     <TextView
         android:text="@string/Overallexp"
+        android:textColor="@color/abc_primary_text_material_light"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/text8"
@@ -118,6 +127,7 @@
         android:text="@string/Menuvariety"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/abc_primary_text_material_light"
         android:id="@+id/text9"
         android:layout_below="@+id/ratingBar5"
         android:layout_alignParentStart="true" />
@@ -132,12 +142,15 @@
         android:layout_centerHorizontal="true" />
 
     <Button
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Next Page"
         android:id="@+id/button1"
+
         android:layout_below="@+id/ratingBar6"
-        android:layout_alignParentRight="true"/>
+        android:layout_alignParentRight="true"
+        android:background="#ce9e2f"/>
 
 
 </RelativeLayout>
